progress on genres and LDA. Some viz in LexicalDiversity

--- a/notebooks/ss/GetGenres.ipynb
+++ b/notebooks/ss/GetGenres.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -54,23 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "readflag=False\n",
-    "if os.access('tempdata/yearinfo.json', os.R_OK)== True:\n",
-    "    readflag=True\n",
-    "    print \"Reading from File, Not Internet\"\n",
-    "    with open(\"tempdata/yearinfo.json\", \"r\") as fd:\n",
-    "        yearinfo = json.load(fd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -79,58 +63,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1970, 1971, 1972, 1973, 1974, 1975, 1976, 1977, 1978, 1979, 1980, 1981, 1982, 1983, 1984, 1985, 1986, 1987, 1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014]\n",
-      "1970\n",
-      "1971\n",
-      "1972\n",
-      "1973\n",
-      "1974\n",
-      "1975\n",
-      "1976\n",
-      "1977\n",
-      "1978\n",
-      "1979\n",
-      "1980\n",
-      "1981\n",
-      "1982\n",
-      "1983\n",
-      "1984\n",
-      "1985\n",
-      "1986\n",
-      "1987\n",
-      "1988\n",
-      "1989\n",
-      "1990\n",
-      "1991\n",
-      "1992\n",
-      "1993\n",
-      "1994\n",
-      "1995\n",
-      "1996\n",
-      "1997\n",
-      "1998\n",
-      "1999\n",
-      "2000\n",
-      "2001\n",
-      "2002\n",
-      "2003\n",
-      "2004\n",
-      "2005\n",
-      "2006\n",
-      "2007\n",
-      "2008\n",
-      "2009\n",
-      "2010\n",
-      "2011\n",
-      "2012\n",
-      "2013\n",
-      "2014\n"
+      "Reading from File, Not Internet\n"
      ]
     }
    ],
    "source": [
+    "readflag=False\n",
+    "if os.access('tempdata/yearinfo.json', os.R_OK)== True:\n",
+    "    readflag=True\n",
+    "    print \"Reading from File, Not Internet\"\n",
+    "    with open(\"tempdata/yearinfo.json\", \"r\") as fd:\n",
+    "        yearinfo = json.load(fd)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "years=range(1970,2015)\n",
     "if not readflag:\n",
-    "    years=range(1970,2015)\n",
     "    print years\n",
     "    yearstext={}\n",
     "    for y in years:\n",
@@ -149,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -211,18 +166,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "yearinfo = {y:parse_year(y, yearstext) for y in years}"
+    "if not readflag:\n",
+    "    yearinfo = {y:parse_year(y, yearstext) for y in years}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -230,27 +186,27 @@
     {
      "data": {
       "text/plain": [
-       "{'band_singer': ['Simon & Garfunkel'],\n",
-       " 'ranking': 1,\n",
-       " 'song': ['Bridge over Troubled Water'],\n",
-       " 'songid': '1970-1',\n",
-       " 'songurl': ['/wiki/Bridge_over_Troubled_Water_(song)'],\n",
-       " 'titletext': '\" Bridge over Troubled Water \"',\n",
-       " 'url': ['/wiki/Simon_%26_Garfunkel']}"
+       "{u'band_singer': [u'Simon & Garfunkel'],\n",
+       " u'ranking': 1,\n",
+       " u'song': [u'Bridge over Troubled Water'],\n",
+       " u'songid': u'1970-1',\n",
+       " u'songurl': [u'/wiki/Bridge_over_Troubled_Water_(song)'],\n",
+       " u'titletext': u'\" Bridge over Troubled Water \"',\n",
+       " u'url': [u'/wiki/Simon_%26_Garfunkel']}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "yearinfo[1970][0]"
+    "yearinfo[str(1970)][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -381,7 +337,7 @@
        "7  1977            Rod Stewart        1      Tonight's the Night (Gonna Be Alright)    /wiki/Tonight%27s_the_Night_(Gonna_Be_Alright)            /wiki/Rod_Stewart"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -431,7 +387,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,29 +399,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/wiki/Contemporary_R%26B Contemporary R&B\n",
-      "/wiki/Hip_hop_music Hip hop music\n",
-      "/wiki/Pop_music Pop music\n",
-      "/wiki/Contemporary_R%26B Contemporary R&B\n",
-      "/wiki/Hip_hop_music Hip hop music\n",
-      "/wiki/Pop_music Pop music\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Again there  is a change in construction of Genres section of artist page\n",
     "# 1970- genres are comma-sparated list, not <li> tagged\n",
     "# same access method, just eliminate the li argument to nextAll \n",
     "# since one ignores the other, just run both\n",
+    "'''\n",
     "for th in pq(requests.get(\"http://en.wikipedia.org/wiki/Jason_Derulo\").text)(\".infobox tr th\"):\n",
     "    if pq(th).text() == \"Genres\":\n",
     "        for e in pq(th).nextAll(\"td  a\"):\n",
@@ -479,12 +423,13 @@
     "    if pq(th).text() == \"Genres\":\n",
     "        for e in pq(th).nextAll(\"td li a\"):\n",
     "            if pq(e).attr.href.find(\"#cite_note\") == -1:\n",
-    "                print pq(e).attr.href, pq(e).attr.title"
+    "                print pq(e).attr.href, pq(e).attr.title\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -493,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -522,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -533,7 +478,7 @@
        "5073"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -554,7 +499,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 40min 26s\n"
+      "Reading artist info from File, Not Internet\n",
+      "Wall time: 11.6 s\n"
      ]
     }
    ],
@@ -576,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -597,19 +543,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "writing to disk\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not readflag2:                #didnt just load from disk, so built urlcache; write it\n",
     "    with open(\"tempdata/artistinfo.json\",\"w\") as fd:\n",
@@ -620,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -631,7 +569,7 @@
        "1833"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -670,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -683,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -751,7 +689,7 @@
        "4  1944-01-16       [/wiki/Country_music, /wiki/Pop_music]        /wiki/Jim_Stafford            1974–present"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -815,53 +753,53 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1970</td>\n",
-       "      <td>Marmalade</td>\n",
-       "      <td>43</td>\n",
-       "      <td>Reflections of My Life</td>\n",
-       "      <td>/wiki/Reflections_of_My_Life</td>\n",
-       "      <td>/wiki/Marmalade_(band)</td>\n",
+       "      <td>The Sandpipers</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Come Saturday Morning</td>\n",
+       "      <td>/wiki/Come_Saturday_Morning_(song)</td>\n",
+       "      <td>/wiki/The_Sandpipers</td>\n",
        "      <td>False</td>\n",
-       "      <td>[/wiki/Beat_music, /wiki/Pop_music, /wiki/Psyc...</td>\n",
-       "      <td>1966–present</td>\n",
+       "      <td>[/wiki/Folk_rock]</td>\n",
+       "      <td>1966–1975</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1970</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>59</td>\n",
-       "      <td>Make Me Smile</td>\n",
-       "      <td>/wiki/Make_Me_Smile</td>\n",
-       "      <td>/wiki/Chicago_(band)</td>\n",
-       "      <td>False</td>\n",
-       "      <td>[/wiki/Rock_music, /wiki/Soft_rock, /wiki/Jazz...</td>\n",
-       "      <td>1967–present</td>\n",
+       "      <td>Elvis Presley</td>\n",
+       "      <td>72</td>\n",
+       "      <td>The Wonder of You</td>\n",
+       "      <td>/wiki/The_Wonder_of_You</td>\n",
+       "      <td>/wiki/Elvis_Presley</td>\n",
+       "      <td>1935-01-08</td>\n",
+       "      <td>[/wiki/Rock_and_roll, /wiki/Pop_music, /wiki/R...</td>\n",
+       "      <td>1953–1977</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1970</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>61</td>\n",
-       "      <td>25 or 6 to 4</td>\n",
-       "      <td>/wiki/25_or_6_to_4</td>\n",
-       "      <td>/wiki/Chicago_(band)</td>\n",
-       "      <td>False</td>\n",
-       "      <td>[/wiki/Rock_music, /wiki/Soft_rock, /wiki/Jazz...</td>\n",
-       "      <td>1967–present</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>Elvis Presley</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Burning Love</td>\n",
+       "      <td>/wiki/Burning_Love</td>\n",
+       "      <td>/wiki/Elvis_Presley</td>\n",
+       "      <td>1935-01-08</td>\n",
+       "      <td>[/wiki/Rock_and_roll, /wiki/Pop_music, /wiki/R...</td>\n",
+       "      <td>1953–1977</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   year        band_singer  ranking                        song                                   songurl                        url   born                                             genres                                                 ya\n",
-       "0  1970  Simon & Garfunkel        1  Bridge over Troubled Water   /wiki/Bridge_over_Troubled_Water_(song)  /wiki/Simon_%26_Garfunkel  False                                  [/wiki/Folk_rock]  1957–1970 (Reunions: 1975, 1981–83, 1990, 1993...\n",
-       "1  1970  Simon & Garfunkel       49                     Cecilia  /wiki/Cecilia_(Simon_%26_Garfunkel_song)  /wiki/Simon_%26_Garfunkel  False                                  [/wiki/Folk_rock]  1957–1970 (Reunions: 1975, 1981–83, 1990, 1993...\n",
-       "2  1970          Marmalade       43      Reflections of My Life              /wiki/Reflections_of_My_Life     /wiki/Marmalade_(band)  False  [/wiki/Beat_music, /wiki/Pop_music, /wiki/Psyc...                                       1966–present\n",
-       "3  1970            Chicago       59               Make Me Smile                       /wiki/Make_Me_Smile       /wiki/Chicago_(band)  False  [/wiki/Rock_music, /wiki/Soft_rock, /wiki/Jazz...                                       1967–present\n",
-       "4  1970            Chicago       61                25 or 6 to 4                        /wiki/25_or_6_to_4       /wiki/Chicago_(band)  False  [/wiki/Rock_music, /wiki/Soft_rock, /wiki/Jazz...                                       1967–present"
+       "   year        band_singer  ranking                        song                                   songurl                        url        born                                             genres                                                 ya\n",
+       "0  1970  Simon & Garfunkel        1  Bridge over Troubled Water   /wiki/Bridge_over_Troubled_Water_(song)  /wiki/Simon_%26_Garfunkel       False                                  [/wiki/Folk_rock]  1957–1970 (Reunions: 1975, 1981–83, 1990, 1993...\n",
+       "1  1970  Simon & Garfunkel       49                     Cecilia  /wiki/Cecilia_(Simon_%26_Garfunkel_song)  /wiki/Simon_%26_Garfunkel       False                                  [/wiki/Folk_rock]  1957–1970 (Reunions: 1975, 1981–83, 1990, 1993...\n",
+       "2  1970     The Sandpipers       90       Come Saturday Morning        /wiki/Come_Saturday_Morning_(song)       /wiki/The_Sandpipers       False                                  [/wiki/Folk_rock]                                          1966–1975\n",
+       "3  1970      Elvis Presley       72           The Wonder of You                   /wiki/The_Wonder_of_You        /wiki/Elvis_Presley  1935-01-08  [/wiki/Rock_and_roll, /wiki/Pop_music, /wiki/R...                                          1953–1977\n",
+       "4  1972      Elvis Presley       48                Burning Love                        /wiki/Burning_Love        /wiki/Elvis_Presley  1935-01-08  [/wiki/Rock_and_roll, /wiki/Pop_music, /wiki/R...                                          1953–1977"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -888,13 +826,12 @@
     "#make a column for each genre\n",
     "for genre in genres:\n",
     "    largedf[genre] = [genre in singergenres for singergenres in largedf.genres]         \n",
-    "\n",
-    "genres"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -903,14 +840,17 @@
     "# make dict of genres with list of songids within each.\n",
     "# first a dict keyed by genre with blank list as value\n",
     "genredict={}\n",
+    "songgenredict={}\n",
     "for genre in genres:\n",
     "    genredict[genre]=[]\n",
-    "# for each song, append its id "
+    "#also make a handy dict of songs mapped to genre list\n",
+    "\n",
+    "# for each song, use its id "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -920,26 +860,47 @@
     "counter=0\n",
     "for song in largedf.iterrows():\n",
     "    counter += 1\n",
-    "    #if counter>9:\n",
-    "        #break\n",
     "    songid= str(song[1][0])+'-'+str(int(song[1][2]))\n",
+    "    songgenredict[songid]= song[1][7]\n",
     "    for i in range(0,len(song[1][7])):\n",
     "        genredict[song[1][7][i]].append(songid) \n",
+    "    \n",
     "        \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "    with open(\"songsbygenre.json\",\"w\") as fd:\n",
-    "        json.dump(genredict, fd)"
+    "with open(\"songsbygenre.json\",\"w\") as fd:\n",
+    "    json.dump(genredict, fd)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"genresbysong.json\",\"w\") as fd:\n",
+    "    json.dump(songgenredict, fd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
