--- a/notebooks/ss/GetGenres.ipynb
+++ b/notebooks/ss/GetGenres.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Acquisition \n",
+    "## Getting Genres All the Way Back to 1970 \n",
     "\n",
-    "This notebook seeks the genres for the artists responsible for top 100 before 1992.   It uses the approach of HW1 first. "
+    "This notebook seeks the genres for the artists responsible for top 100 from 1970-2014. It uses the approach of HW1 and extends it to collect genres from earlier years when the wiki pages were formatted differently. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -78,11 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping the http requests because the result is already stored.\n"
+     ]
+    }
+   ],
    "source": [
     "years=range(1970,2015)\n",
     "if not readflag:\n",
@@ -92,19 +100,21 @@
     "        print y\n",
     "        yreq=requests.get(\"http://en.wikipedia.org/wiki/Billboard_Year-End_Hot_100_singles_of_%i\" % y)\n",
     "        yearstext[y]=yreq.text\n",
-    "        time.sleep(1)\n"
+    "        time.sleep(1)\n",
+    "else:\n",
+    "    print \"Skipping the http requests because the result is already stored.\"\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wikipedia's format for the billboard 100 changed between 1981 and 1982. Before 1981 The rankings were introduced with table rows; after, it was table headers. So the function `parse_year()` will work for 1982-1991.  Something else is necessary for earlier ones. "
+    "Wikipedia's format for the billboard 100 changed between 1981 and 1982. Before 1981 The rankings were introduced with table rows; after, it was table headers. So the HW1 function `parse_year()` will work for 1982-1991.  Something else is necessary for earlier ones. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +128,8 @@
     "    songs=[]\n",
     "    for r in d_rows:\n",
     "        # Now we have to handle pre-1982 separately from post- \n",
-    "        # Wikipedia decided to change the table format along the way, and place the song position on a \"th\" element\n",
+    "        # Wikipedia decided to change the table format along the way, and place \n",
+    "        # the song position on a \"th\" element\n",
     "        # instead of the \"td\" element from the first page we parsed.\n",
     "        if year < 1982:\n",
     "            #first cell has ranking\n",
@@ -132,7 +143,7 @@
     "            d_artist = pq(r)('td').eq(2)\n",
     "            tdtext=pq(d_artist.text()) \n",
     "            bs=pq(pq(d_artist)('a'))\n",
-    "        else:\n",
+    "        else:  # for the later years HW1 works \n",
     "            d_th=pq(r)('th')\n",
     "            ranking = int(pq(d_th[0]).text())\n",
     "            songid = str(year)+'-'+str(ranking)\n",
@@ -151,22 +162,18 @@
     "        # Some singers and songs don't actually have an \"a\" element, and therefore don't have a URL link.\n",
     "        # In those cases just use the text between the tags as the song name and set the URL field to None.\n",
     "        if len(songanchors)==0:\n",
-    "            # Python accepts negative indexes, which count from the end of the string.\n",
-    "            # There is no \"-0\" position, to the last element is the \"-1\" element. In this case we are saying\n",
     "            # we only want the second to next to last elements. We do this to remove the quotes around the string.\n",
     "            song=[titletext[1:-1].strip()] # The strip method removes whitespaces at the begining and end of a string.\n",
     "            songurl=[None]\n",
     "        songdict=dict(ranking=ranking, song=songnames, songid=songid, songurl=songurls, titletext=titletext,  band_singer=band_singer, url=band_singer_url)\n",
     "        songs.append(songdict)\n",
     "    return songs\n",
-    "\n",
-    "#yearstext[1970]\n",
-    "#parse_year(1980, yearstext)[:5]"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -178,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -195,7 +202,7 @@
        " u'url': [u'/wiki/Simon_%26_Garfunkel']}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -227,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -337,7 +344,7 @@
        "7  1977            Rod Stewart        1      Tonight's the Night (Gonna Be Alright)    /wiki/Tonight%27s_the_Night_(Gonna_Be_Alright)            /wiki/Rod_Stewart"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -387,7 +394,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,47 +405,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
-    "# Again there  is a change in construction of Genres section of artist page\n",
-    "# 1970- genres are comma-sparated list, not <li> tagged\n",
-    "# same access method, just eliminate the li argument to nextAll \n",
-    "# since one ignores the other, just run both\n",
-    "'''\n",
-    "for th in pq(requests.get(\"http://en.wikipedia.org/wiki/Jason_Derulo\").text)(\".infobox tr th\"):\n",
+    "Again there  is a change in construction of Genres section of artist page\n",
+    "1970- genres are comma-sparated list, not `<li>` tagged.  Same access method, just eliminate the `li` argument to `nextAll`. Since one ignores the other, just run both. It looks like this:\n",
+    "\n",
+    "`for th in pq(requests.get(\"http://en.wikipedia.org/wiki/Jason_Derulo\").text)(\".infobox tr th\"):\n",
     "    if pq(th).text() == \"Genres\":\n",
     "        for e in pq(th).nextAll(\"td  a\"):\n",
     "            if pq(e).attr.href.find(\"#cite_note\") == -1:\n",
-    "                print pq(e).attr.href, pq(e).attr.title\n",
+    "                print pq(e).attr.href, pq(e).attr.title`\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "for th in pq(requests.get(\"http://en.wikipedia.org/wiki/Jason_Derulo\").text)(\".infobox tr th\"):\n",
+    "`for th in pq(requests.get(\"http://en.wikipedia.org/wiki/Jason_Derulo\").text)(\".infobox tr th\"):\n",
     "    if pq(th).text() == \"Genres\":\n",
     "        for e in pq(th).nextAll(\"td li a\"):\n",
     "            if pq(e).attr.href.find(\"#cite_note\") == -1:\n",
-    "                print pq(e).attr.href, pq(e).attr.title\n",
-    "'''"
+    "                print pq(e).attr.href, pq(e).attr.title`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Slurp up the pages if they aren't already available."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -467,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -478,7 +477,7 @@
        "5073"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -500,13 +499,13 @@
      "output_type": "stream",
      "text": [
       "Reading artist info from File, Not Internet\n",
-      "Wall time: 11.6 s\n"
+      "Wall time: 3.59 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "\n",
+    "# this even takes a while if it is stored locally.\n",
     "readflag2=False\n",
     "#if the file is there, just open it. \n",
     "if os.access('tempdata/artistinfo.json', os.R_OK)== True:\n",
@@ -522,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -543,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -552,13 +551,12 @@
     "if not readflag2:                #didnt just load from disk, so built urlcache; write it\n",
     "    with open(\"tempdata/artistinfo.json\",\"w\") as fd:\n",
     "        json.dump(urlcache, fd)\n",
-    "        print \"writing to disk\"\n",
-    "    \n"
+    "        print \"writing to disk\" "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -569,7 +567,7 @@
        "1833"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,18 +578,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# HW1 slightly modified\n",
     "def singer_band_info(url, page_text):\n",
     "    genres=['NA']\n",
     "    born=False\n",
     "    ya=False\n",
     "\n",
-    "    for th in pq(page_text)(\".infobox tr th\"):\n",
+    "    for th in pq(page_text)(\".infobox tr th\"): #this is what changed...\n",
     "        if pq(th).text() == \"Genres\":\n",
     "            genres=[]\n",
     "            for e in pq(th).nextAll(\"td a\"):\n",
@@ -608,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -616,12 +615,12 @@
    "source": [
     "singer_band_info_list=[]\n",
     "for k,v in urlcache.items():\n",
-    "    singer_band_info_list.append(singer_band_info(k, v))\n"
+    "    singer_band_info_list.append(singer_band_info(k, v))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -689,7 +688,7 @@
        "4  1944-01-16       [/wiki/Country_music, /wiki/Pop_music]        /wiki/Jim_Stafford            1974–present"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -799,7 +798,7 @@
        "4  1972      Elvis Presley       48                Burning Love                        /wiki/Burning_Love        /wiki/Elvis_Presley  1935-01-08  [/wiki/Rock_and_roll, /wiki/Pop_music, /wiki/R...                                          1953–1977"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -825,13 +824,12 @@
     "\n",
     "#make a column for each genre\n",
     "for genre in genres:\n",
-    "    largedf[genre] = [genre in singergenres for singergenres in largedf.genres]         \n",
-    "\n"
+    "    largedf[genre] = [genre in singergenres for singergenres in largedf.genres]         "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -844,13 +842,12 @@
     "for genre in genres:\n",
     "    genredict[genre]=[]\n",
     "#also make a handy dict of songs mapped to genre list\n",
-    "\n",
     "# for each song, use its id "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -863,15 +860,19 @@
     "    songid= str(song[1][0])+'-'+str(int(song[1][2]))\n",
     "    songgenredict[songid]= song[1][7]\n",
     "    for i in range(0,len(song[1][7])):\n",
-    "        genredict[song[1][7][i]].append(songid) \n",
-    "    \n",
-    "        \n",
-    "    "
+    "        genredict[song[1][7][i]].append(songid)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now store the big, wide dataframe and some handy dictionaries to make it easy to link songs to genres and vice versa.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -883,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -895,12 +896,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "largedf.to_csv('../../data/conditioned/master_lyrics_with_all_years_genres.csv',encoding='utf-8')"
+   ]
   },
   {
    "cell_type": "code",
