re-run and update all the notebooks and data droppings and find missing ones.

--- a/notebooks/ss/GetGenres.ipynb
+++ b/notebooks/ss/GetGenres.ipynb
@@ -1,12 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Getting Genres All the Way Back to 1970 \n",
     "\n",
@@ -503,7 +499,7 @@
      "output_type": "stream",
      "text": [
       "Reading artist info from File, Not Internet\n",
-      "Wall time: 3.38 s\n"
+      "Wall time: 7.03 s\n"
      ]
     }
    ],
@@ -833,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1623,7 +1619,7 @@
        "[5 rows x 445 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1660,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -1671,7 +1667,7 @@
        "(5073, 445)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1682,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -2472,7 +2468,7 @@
        "[5 rows x 445 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2510,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -2590,7 +2586,7 @@
        "1970-2        1         2  1970  https://en.wikipedia.org/wiki/(They_Long_to_Be...  (They Long to Be) Close to You       The Carpenters  Why do birds suddenly appear. Everytime you ar...    1970   1970-2  http://lyrics.wikia.com/Carpenters:%28They_Lon...  Why do birds suddenly appear. Everytime you ar..."
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2603,7 +2599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -2957,7 +2953,7 @@
        "[2 rows x 451 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2971,7 +2967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -2983,7 +2979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -2995,7 +2991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -3676,7 +3672,7 @@
        "[5 rows x 451 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3691,13 +3687,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "odf.to_csv('../../data/conditioned/master_lyrics_with_all_years_genres.csv',encoding='utf-8')\n"
+    "odf.to_csv('../../data/conditioned/master_lyrics_with_all_years_genres.csv',encoding='utf-8')\n",
+    "odf.to_csv('master_lyrics_with_all_years_genres.csv',encoding='utf-8')\n"
    ]
   },
   {
