hypernym and synonym CSVs adjusted

--- a/notebooks/mj/Vector-Ensemble.ipynb
+++ b/notebooks/mj/Vector-Ensemble.ipynb
@@ -258,8 +258,8 @@
        "      <td>When you're weary. Feeling small. When tears a...</td>\n",
        "      <td>time bridge water</td>\n",
        "      <td>rough troubled</td>\n",
-       "      <td>time bridge water</td>\n",
-       "      <td>troubled rough</td>\n",
+       "      <td>bridge time water</td>\n",
+       "      <td>rough troubled</td>\n",
        "      <td>bridge time water</td>\n",
        "      <td>rough troubled</td>\n",
        "    </tr>\n",
@@ -269,7 +269,7 @@
       ],
       "text/plain": [
        "   index  position  year                                         title.href                       title               artist                                             lyrics  decade song_key                                         lyrics_url                                    lyrics_abstract        noun_vector      adj_vector    noun_syn_vector  adj_syn_vector noun_syn_hype_vector adj_syn_hype_vector\n",
-       "0      0         1  1970  https://en.wikipedia.org/wiki/Bridge_over_Trou...  Bridge over Troubled Water  Simon and Garfunkel  When you're weary. Feeling small. When tears a...    1970   1970-1  http://lyrics.wikia.com/Simon_And_Garfunkel:Br...  When you're weary. Feeling small. When tears a...  time bridge water  rough troubled  time bridge water  troubled rough    bridge time water      rough troubled"
+       "0      0         1  1970  https://en.wikipedia.org/wiki/Bridge_over_Trou...  Bridge over Troubled Water  Simon and Garfunkel  When you're weary. Feeling small. When tears a...    1970   1970-1  http://lyrics.wikia.com/Simon_And_Garfunkel:Br...  When you're weary. Feeling small. When tears a...  time bridge water  rough troubled  bridge time water  rough troubled    bridge time water      rough troubled"
       ]
      },
      "execution_count": 11,
@@ -383,94 +383,94 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1367</th>\n",
-       "      <td>1367</td>\n",
-       "      <td>68</td>\n",
-       "      <td>1983</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Wanna_Be_Startin...</td>\n",
-       "      <td>Wanna Be Startin' Somethin'</td>\n",
-       "      <td>Michael Jackson</td>\n",
-       "      <td>I said you wanna be startin' somethin'. You go...</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>1983-68</td>\n",
-       "      <td>http://lyrics.wikia.com/Michael_Jackson:Wanna_...</td>\n",
-       "      <td>I said you wanna be startin' somethin'. You go...</td>\n",
-       "      <td>cunnin declinin head coo sa</td>\n",
-       "      <td>treacherous high loud</td>\n",
-       "      <td>head sa coo</td>\n",
-       "      <td>high loud treacherous</td>\n",
-       "      <td>coo head sa</td>\n",
-       "      <td>high loud treacherous</td>\n",
-       "      <td>70</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>75</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3080</th>\n",
-       "      <td>3080</td>\n",
-       "      <td>81</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Where_I_Wanna_Be...</td>\n",
-       "      <td>Where I Wanna Be</td>\n",
-       "      <td>Donell Jones</td>\n",
-       "      <td>(verse one). I just left my baby girl a messag...</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>2000-81</td>\n",
-       "      <td>http://lyrics.wikia.com/Donell_Jones:Where_I_W...</td>\n",
-       "      <td>(verse one). I just left my baby girl a messag...</td>\n",
-       "      <td>year love share</td>\n",
-       "      <td>teenage real</td>\n",
-       "      <td>love share year</td>\n",
-       "      <td>adolescent real</td>\n",
-       "      <td>love share year</td>\n",
-       "      <td>adolescent real</td>\n",
-       "      <td>90</td>\n",
+       "      <th>2478</th>\n",
+       "      <td>2478</td>\n",
+       "      <td>79</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Beautiful in My Eyes</td>\n",
+       "      <td>Joshua Kadison</td>\n",
+       "      <td>You're my peace of mind. In this crazy world. ...</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>1994-79</td>\n",
+       "      <td>http://lyrics.wikia.com/Joshua_Kadison:Beautif...</td>\n",
+       "      <td>You're my peace of mind. In this crazy world. ...</td>\n",
+       "      <td>world eye year love</td>\n",
+       "      <td>crazy beautiful passing true</td>\n",
+       "      <td>eye love universe year</td>\n",
+       "      <td>beautiful brainsick ephemeral true</td>\n",
+       "      <td>eye love universe year</td>\n",
+       "      <td>beautiful brainsick ephemeral true</td>\n",
+       "      <td>80</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>100</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4020</th>\n",
-       "      <td>4020</td>\n",
-       "      <td>21</td>\n",
+       "      <th>4009</th>\n",
+       "      <td>4009</td>\n",
+       "      <td>10</td>\n",
        "      <td>2010</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Empire_State_of_...</td>\n",
-       "      <td>Empire State of Mind</td>\n",
-       "      <td>Jay-Z</td>\n",
-       "      <td>Yeah. Yeah, I'm up at Brooklyn, now I'm down i...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Break_Your_Heart</td>\n",
+       "      <td>Break Your Heart</td>\n",
+       "      <td>Taio Cruz</td>\n",
+       "      <td>Whoa, whoa. Luda! Now I may not be the worst o...</td>\n",
        "      <td>2010</td>\n",
-       "      <td>2010-21</td>\n",
-       "      <td>http://lyrics.wikia.com/Jay-Z:Empire_State_Of_...</td>\n",
-       "      <td>Yeah. Yeah, I'm up at Brooklyn, now I'm down i...</td>\n",
-       "      <td>courtside fife street brand light nigga shit y...</td>\n",
-       "      <td>high new big hot famous welcome yellow fair na...</td>\n",
-       "      <td>yankee school foreigner king light winter life...</td>\n",
-       "      <td>long particular high fair bad bright hot virgi...</td>\n",
-       "      <td>air bellow boundary cab city corner crap dolla...</td>\n",
-       "      <td>bad bare blazing bright celebrated cold fair g...</td>\n",
-       "      <td>30</td>\n",
+       "      <td>2010-10</td>\n",
+       "      <td>http://lyrics.wikia.com/Taio_Cruz:Break_Your_H...</td>\n",
+       "      <td>Whoa, whoa. Luda! Now I may not be the worst o...</td>\n",
+       "      <td>piece tryin wolf bone</td>\n",
+       "      <td>splatter little bitty real big bad</td>\n",
+       "      <td>bone piece wolf</td>\n",
+       "      <td>bad bitty large real small</td>\n",
+       "      <td>bone piece wolf</td>\n",
+       "      <td>bad bitty large real small</td>\n",
+       "      <td>10</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>25</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2307</th>\n",
+       "      <td>2307</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Dreamlover_(song)</td>\n",
+       "      <td>Dreamlover</td>\n",
+       "      <td>Mariah Carey</td>\n",
+       "      <td>Ooh. Doo doo doo doo doo doo doo. Ooh, baby. D...</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>1993-8</td>\n",
+       "      <td>http://lyrics.wikia.com/Mariah_Carey:Dreamlover</td>\n",
+       "      <td>Ooh. Doo doo doo doo doo doo doo. Ooh, baby. D...</td>\n",
+       "      <td>somebody night rescue</td>\n",
+       "      <td>uplifting long lonely come</td>\n",
+       "      <td>night person rescue</td>\n",
+       "      <td>alone long</td>\n",
+       "      <td>night person rescue</td>\n",
+       "      <td>alone long</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      index  position  year                                         title.href                        title           artist                                             lyrics  decade song_key                                         lyrics_url                                    lyrics_abstract                                        noun_vector                                         adj_vector                                    noun_syn_vector  \\\n",
-       "1367   1367        68  1983  https://en.wikipedia.org/wiki/Wanna_Be_Startin...  Wanna Be Startin' Somethin'  Michael Jackson  I said you wanna be startin' somethin'. You go...    1980  1983-68  http://lyrics.wikia.com/Michael_Jackson:Wanna_...  I said you wanna be startin' somethin'. You go...                        cunnin declinin head coo sa                              treacherous high loud                                        head sa coo   \n",
-       "3080   3080        81  2000  https://en.wikipedia.org/wiki/Where_I_Wanna_Be...             Where I Wanna Be     Donell Jones  (verse one). I just left my baby girl a messag...    2000  2000-81  http://lyrics.wikia.com/Donell_Jones:Where_I_W...  (verse one). I just left my baby girl a messag...                                    year love share                                       teenage real                                    love share year   \n",
-       "4020   4020        21  2010  https://en.wikipedia.org/wiki/Empire_State_of_...         Empire State of Mind            Jay-Z  Yeah. Yeah, I'm up at Brooklyn, now I'm down i...    2010  2010-21  http://lyrics.wikia.com/Jay-Z:Empire_State_Of_...  Yeah. Yeah, I'm up at Brooklyn, now I'm down i...  courtside fife street brand light nigga shit y...  high new big hot famous welcome yellow fair na...  yankee school foreigner king light winter life...   \n",
+       "      index  position  year                                       title.href                 title          artist                                             lyrics  decade song_key                                         lyrics_url                                    lyrics_abstract            noun_vector                          adj_vector         noun_syn_vector                      adj_syn_vector    noun_syn_hype_vector                 adj_syn_hype_vector  bin_10_percent  \\\n",
+       "2478   2478        79  1994                                              NaN  Beautiful in My Eyes  Joshua Kadison  You're my peace of mind. In this crazy world. ...    1990  1994-79  http://lyrics.wikia.com/Joshua_Kadison:Beautif...  You're my peace of mind. In this crazy world. ...    world eye year love        crazy beautiful passing true  eye love universe year  beautiful brainsick ephemeral true  eye love universe year  beautiful brainsick ephemeral true              80   \n",
+       "4009   4009        10  2010   https://en.wikipedia.org/wiki/Break_Your_Heart      Break Your Heart       Taio Cruz  Whoa, whoa. Luda! Now I may not be the worst o...    2010  2010-10  http://lyrics.wikia.com/Taio_Cruz:Break_Your_H...  Whoa, whoa. Luda! Now I may not be the worst o...  piece tryin wolf bone  splatter little bitty real big bad         bone piece wolf          bad bitty large real small         bone piece wolf          bad bitty large real small              10   \n",
+       "2307   2307         8  1993  https://en.wikipedia.org/wiki/Dreamlover_(song)            Dreamlover    Mariah Carey  Ooh. Doo doo doo doo doo doo doo. Ooh, baby. D...    1990   1993-8    http://lyrics.wikia.com/Mariah_Carey:Dreamlover  Ooh. Doo doo doo doo doo doo doo. Ooh, baby. D...  somebody night rescue          uplifting long lonely come     night person rescue                          alone long     night person rescue                          alone long              10   \n",
        "\n",
-       "                                         adj_syn_vector                               noun_syn_hype_vector                                adj_syn_hype_vector  bin_10_percent  is_top_50_percent  is_top_25_percent  bin_25_percent  is_top_10_percent  \n",
-       "1367                              high loud treacherous                                        coo head sa                              high loud treacherous              70                  0                  0              75                  0  \n",
-       "3080                                    adolescent real                                    love share year                                    adolescent real              90                  0                  0             100                  0  \n",
-       "4020  long particular high fair bad bright hot virgi...  air bellow boundary cab city corner crap dolla...  bad bare blazing bright celebrated cold fair g...              30                  1                  1              25                  0  "
+       "      is_top_50_percent  is_top_25_percent  bin_25_percent  is_top_10_percent  \n",
+       "2478                  0                  0             100                  0  \n",
+       "4009                  1                  1              25                  1  \n",
+       "2307                  1                  1              25                  1  "
       ]
      },
      "execution_count": 13,
@@ -645,18 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "nhype = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -677,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -699,7 +688,7 @@
       "\n",
       "--- noun_syn_hype_vector ---\n",
       "\n",
-      "\tHow long is dict? 3230\n",
+      "\tHow long is dict? 3215\n",
       "\tWhat are the first 5 entries? [['abdomen', 'ability', 'abnormality', 'abortion', 'abrasion']]\n"
      ]
     }
@@ -716,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -741,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -751,8 +740,8 @@
      "output_type": "stream",
      "text": [
       "For syn versus syn-hype words...\n",
-      "How many are same?  3230\n",
-      "How many are only in syn?  0\n",
+      "How many are same?  3215\n",
+      "How many are only in syn?  15\n",
       "How many are only in hype?  0\n"
      ]
     }
